[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/blackboard.jpg" type="Texture" id=1]
[ext_resource path="res://LoonyLips.gd" type="Script" id=2]
[ext_resource path="res://assets/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://assets/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 39
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Words" type="Label" parent="VBoxContainer"]
margin_right = 976.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.972549, 0.964706, 0.964706, 1 )
text = "Place some text here"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 976.0
margin_bottom = 124.0
custom_constants/separation = 12

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 820.0
margin_bottom = 65.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 832.0
margin_right = 897.0
margin_bottom = 65.0
rect_min_size = Vector2( 65, 65 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 909.0
margin_top = 2.0
margin_right = 976.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
text = "OK"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_Sentenceboi_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_toggled"]
